--- a/index.html
+++ b/index.html
@@ -597,34 +597,22 @@ function updateProgress(minutes) {
   const progressText = document.getElementById('progressText');
   const ud = window.userData || {};
   const clicks = ud.adClickCount || 0;
-  const dayPassActive = ud.dayPassExpiresAt && Date.now() < ud.dayPassExpiresAt;
 
-  let percentage = 0;
-  if (dayPassActive) {
-    percentage = 100;
-    progressText.textContent = '✅ Day Pass Active (24h)';
-    progressText.style.color = 'var(--success)';
-    const expiry = new Date(ud.dayPassExpiresAt);
-    const note = document.getElementById('dayPassNote');
-    if (note) note.textContent = `Day Pass active until ${expiry.toLocaleString()}. Enjoy access for 24 hours.`;
-  } else {
-    percentage = Math.min((clicks / 8) * 100, 100);
-    if (clicks >= 8) {
-      progressText.textContent = '✅ You qualified by clicks!';
-      progressText.style.color = 'var(--success)';
-      const note = document.getElementById('dayPassNote');
-      if (note) note.textContent = 'Day Pass will activate automatically when you claim or after qualification.';
-    } else {
-      const remaining = 8 - Math.floor(clicks);
-      progressText.textContent = `Get Day Pass: ${remaining} more ad clicks (or watch 2-min ad)`;
-      progressText.style.color = 'var(--accent)';
-      const note = document.getElementById('dayPassNote');
-      if (note) note.textContent = 'Day Pass: +180 minutes (24h) — get it after 8 ad clicks or by watching the 2‑min rewarded ad.';
-    }
-  }
-
+  const percentage = Math.min((clicks / 8) * 100, 100);
   progressFill.style.width = percentage + '%';
   progressFill.textContent = Math.floor(percentage) + '%';
+
+  const progressNote = document.getElementById('dayPassNote');
+  if (clicks >= 8) {
+    progressText.textContent = '✅ Unlocked by clicks!';
+    progressText.style.color = 'var(--success)';
+    if (progressNote) progressNote.textContent = `Unlocked — total clicks: ${clicks}. You can keep clicking to earn more minutes.`;
+  } else {
+    const remaining = 8 - clicks;
+    progressText.textContent = `Get Day Pass: ${remaining} more ad clicks to unlock`;
+    progressText.style.color = 'var(--accent)';
+    if (progressNote) progressNote.textContent = 'Each 2-min ad = +180 min, each 1-min ad = +80 min. 8 clicks (all 2-min) = 1440 min.';
+  }
 }
 
 /* ==================== FORCE REFRESH ==================== */
@@ -696,8 +684,7 @@ userRef.on("value", snap => {
   
   // Hide tutorial after unlocking via clicks or day pass
   const clicks = d.adClickCount || 0;
-  const dayPassActive = d.dayPassExpiresAt && Date.now() < d.dayPassExpiresAt;
-  if (dayPassActive || clicks >= 8) {
+   if (clicks >= 8) {
     document.getElementById('tutorial').style.display = 'none';
   }
 });
@@ -750,18 +737,17 @@ async function watchRewarded() {
   
   try {
     await show_10340427();
-    // Special: one-time 2-min rewarded ad grants immediate Day Pass (180 minutes / 24h)
+    // 2-min rewarded ad: +180 minutes and counts as 1 click toward unlock
     await userRef.transaction(d => {
       if (!d) return d;
       d.totalMinutes = (d.totalMinutes || 0) + 180;
       d.adViews = (d.adViews || 0) + 1;
       d.totalEarnings = (d.totalEarnings || 0) + 180 * 0.02;
-      d.adClickCount = 8; // mark as full
-      d.dayPassExpiresAt = Date.now() + 24 * 60 * 60 * 1000;
+      d.adClickCount = (d.adClickCount || 0) + 1;
       d.lastEarnedAt = Date.now();
       return d;
     });
-    alert("🎉 Day Pass granted: +180 minutes (24h)!");
+    alert("🎉 +180 minutes! (Click counted toward unlock)");
   } catch (e) {
     alert("❌ Ad failed to load. Check connection.");
   } finally {
@@ -779,30 +765,17 @@ async function watchPopup() {
   
   try {
     await show_10340427('pop');
-    // 1-minute ad: normal minute reward and counts as 1 click toward 8 clicks for Day Pass
-    let grantedDayPass = false;
+    // 1-minute ad: +80 minutes and counts as 1 click toward unlock
     await userRef.transaction(d => {
       if (!d) return d;
-      d.totalMinutes = (d.totalMinutes || 0) + 1;
+      d.totalMinutes = (d.totalMinutes || 0) + 80;
       d.adViews = (d.adViews || 0) + 1;
-      d.totalEarnings = (d.totalEarnings || 0) + 1 * 0.02;
+      d.totalEarnings = (d.totalEarnings || 0) + 80 * 0.02;
       d.adClickCount = (d.adClickCount || 0) + 1;
-      // if reached 8 clicks and no active day pass, grant day pass
-      const now = Date.now();
-      const hasActive = d.dayPassExpiresAt && now < d.dayPassExpiresAt;
-      if (!hasActive && d.adClickCount >= 8) {
-        d.totalMinutes = (d.totalMinutes || 0) + 180;
-        d.dayPassExpiresAt = now + 24 * 60 * 60 * 1000;
-        grantedDayPass = true;
-      }
-      d.lastEarnedAt = now;
+      d.lastEarnedAt = Date.now();
       return d;
     });
-    if (grantedDayPass) {
-      alert('🎉 Day Pass granted after 8 clicks: +180 minutes (24h)!');
-    } else {
-      alert("🔥 +1 minute earned!");
-    }
+    alert("🔥 +80 minutes! (Click counted toward unlock)");
   } catch (e) {
     alert("❌ Ad failed to load. Check connection.");
   } finally {
@@ -814,7 +787,6 @@ async function watchPopup() {
 function updateChannelButtons(minutes, joinedChannels) {
   const ud = window.userData || {};
   const clicks = ud.adClickCount || 0;
-  const dayPassActive = ud.dayPassExpiresAt && Date.now() < ud.dayPassExpiresAt;
   Object.keys(CHANNEL_NAMES).forEach(channel => {
     const btn = document.getElementById(`btn-${channel}`);
     const reqText = document.getElementById(`req-${channel}`);
@@ -846,7 +818,7 @@ function updateChannelButtons(minutes, joinedChannels) {
       btn.disabled = false;
       btn.style.display = "block";
       btn.onclick = () => joinChannel(channel);
-      reqText.innerHTML = "✅ YOU QUALIFY (Day Pass / 8 clicks)";
+       reqText.innerHTML = "✅ YOU QUALIFY (8 clicks)";
       reqText.style.color = "#00ff88";
     } else {
       status.style.background = "#ffcc00";
