--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ body {
     <!-- Match 1 -->
     <div class="channel-card">
       <div class="channel-header">
-        <h3 class="channel-title">🏏 Bangladesh Premier League</h3>
+        <h3 class="channel-title">🏏 PAKISTAN 🇵🇰 vs SRILANKA 🇱🇰</h3>
         <span class="status-indicator" id="status-match1" style="background: #ff4d4d;"></span>
       </div>
       <p class="channel-info">Live from Cricket_live_streeming_VIP_channel_01</p>
@@ -539,7 +539,7 @@ body {
     <!-- Match 2 -->
     <div class="channel-card">
       <div class="channel-header">
-        <h3 class="channel-title">🏏 Mens Big Bash League</h3>
+        <h3 class="channel-title">🏏 Ashes 5th test</h3>
         <span class="status-indicator" id="status-match2" style="background: #ff4d4d;"></span>
       </div>
       <p class="channel-info">Live from Cricket_live_streeming_VIP_channel_02</p>
